--- a/katrid/templates/buttons.html
+++ b/katrid/templates/buttons.html
@@ -38,18 +38,144 @@
             <div class="form-group child-margin">
               <p>Large button. <code>.btn-lg</code></p>
               <button type="button" class="btn btn-lg btn-default">Default</button>
+              <button type="button" class="btn btn-lg btn-primary">Primary</button>
             </div>
             <div class="form-group child-margin">
               <p>Small button. <code>.btn-sm</code></p>
               <button type="button" class="btn btn-sm btn-default">Default</button>
+              <button type="button" class="btn btn-sm btn-primary">Primary</button>
             </div>
             <div class="form-group child-margin">
               <p>X-Small button. <code>.btn-xs</code></p>
               <button type="button" class="btn btn-xs btn-default">Default</button>
+              <button type="button" class="btn btn-xs btn-primary">Primary</button>
             </div>
 
           </div>
         </div>
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Block Button
+          </div>
+          <div class="panel-body">
+            <button class="btn btn-primary btn-block">Block Button</button>
+            <button class="btn btn-block btn-primary-outline">Button Outline</button>
+          </div>
+        </div>
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Button Dropdown
+          </div>
+          <div class="panel-body child-margin">
+            <p>Large button dropdown</p>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-default btn-lg dropdown-toggle">Action <span
+                  class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-primary btn-lg dropdown-toggle">Action <span
+                  class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <p>Default size button dropdown</p>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Action <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle">Action <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <p>Small button dropdown</p>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-default btn-sm dropdown-toggle">Action <span
+                  class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-primary btn-sm dropdown-toggle">Action <span
+                  class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <p>Extra small button dropdown</p>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-default btn-xs dropdown-toggle">Action <span
+                  class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-primary btn-xs dropdown-toggle">Action <span
+                  class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <p>Animated Dropdown <code>.animated .flipInX</code></p>
+            <div class="btn-group">
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle">Action <span
+                  class="caret"></span></button>
+              <ul class="dropdown-menu animated flipInX">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
       </div>
 
 
@@ -59,7 +185,6 @@
             Outline Buttons
           </div>
           <div class="panel-body">
-
 
             <div class="form-group child-margin">
               <p>Default button size. <code>.btn .btn-&lt;color-brand&gt;-outline</code></p>
@@ -73,10 +198,44 @@
 
           </div>
         </div>
-      </div>
 
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            Rounded Buttons
+          </div>
+          <div class="panel-body">
+            <div class="form-group">
+              <a class="btn btn-default btn-round">Default</a>
+              <a class="btn btn-primary btn-round">Primary</a>
+              <a class="btn btn-dark btn-round">Dark</a>
+              <a class="btn btn-success btn-round">Success</a>
+              <a class="btn btn-info btn-round">Info</a>
+              <a class="btn btn-warning btn-round">Warning</a>
+              <a class="btn btn-danger btn-round">Danger</a>
+            </div>
+            <p>Large button <code>.btn-round .btn-lg</code></p>
+            <a class="btn btn-default btn-lg btn-round">Default</a>
+            <a class="btn btn-primary btn-lg btn-round">Primary</a>
+            <p>Small button <code>.btn-round .btn-sm</code></p>
+            <a class="btn btn-default btn-sm btn-round">Default</a>
+            <a class="btn btn-primary btn-sm btn-round">Primary</a>
+            <p>Extra Small button <code>.btn-round .btn-xs</code></p>
+            <a class="btn btn-default btn-xs btn-round">Default</a>
+            <a class="btn btn-primary btn-xs btn-round">Primary</a>
+            <hr>
+            <h3>Outline</h3>
+            <div class="form-group">
+              <a class="btn btn-primary-outline btn-round">Primary</a>
+              <a class="btn btn-dark-outline btn-round">Dark</a>
+              <a class="btn btn-success-outline btn-round">Success</a>
+              <a class="btn btn-info-outline btn-round">Info</a>
+              <a class="btn btn-warning-outline btn-round">Warning</a>
+              <a class="btn btn-danger-outline btn-round">Danger</a>
+            </div>
+          </div>
 
-      <div class="col-md-12">
+        </div>
+
         <div class="panel panel-default">
           <div class="panel-heading">
             Additional Colors
@@ -103,7 +262,9 @@
 
           </div>
         </div>
+
       </div>
+
     </div>
   </div>
 {% endblock %}
