--- a/katrid/theme/less/style.less
+++ b/katrid/theme/less/style.less
@@ -21,4 +21,5 @@
 @import "style/badges.less";
 @import "style/alerts.less";
 @import "style/rating.less";
+@import "style/progress-bars.less";
 @import "style/utilities.less";
