--- a/katrid/theme/less/style/checkbox.less
+++ b/katrid/theme/less/style/checkbox.less
@@ -73,7 +73,7 @@ label.radio > input:checked + i,
 label.radio > input:focus + i,
 label.radio:hover > input + i
 {
-  border-color: @brand-blue;
+  border-color: @brand-primary;
 }
 
 label.checkbox > input:checked + i:after,
@@ -88,7 +88,7 @@ label.radio > input + i:after {
 
 label.checkbox > i:after {
   position: absolute;
-  color: @brand-blue;
+  color: @brand-primary;
   content: '\f00c';
   top: -1px;
   left: 1px;
@@ -100,7 +100,7 @@ label.checkbox > i:after {
 
 label.radio > i:after {
   position: absolute;
-  background-color: @brand-blue;
+  background-color: @brand-primary;
   content: ' ';
   border-radius: 50%;
   top: 3px;
