--- a/katrid/theme/less/style/kanban.less
+++ b/katrid/theme/less/style/kanban.less
@@ -2,6 +2,7 @@
 .kanban {
   padding: 0;
   border: 1px solid @input-border;
+  background-color: #ffffff;
 
   .kanban-item.ui-sortable-helper {
     z-index: 9999;
