--- a/katrid/theme/less/style/panels.less
+++ b/katrid/theme/less/style/panels.less
@@ -35,3 +35,12 @@
 .panel-cyan {
   .panel-variant(@brand-cyan; @panel-primary-text; @brand-cyan; @brand-cyan);
 }
+
+.jumbotron {
+  background-color: #ebebeb;
+}
+
+.panel-heading .btn {
+  margin-top: -5px;
+  margin-right: 8px;
+}
