--- a/katrid/templates/dashboard-1.html
+++ b/katrid/templates/dashboard-1.html
@@ -6,25 +6,51 @@
       <!-- dashboard widgets -->
       <div class="col-sm-12">
         <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4><i class="fa fa-fw fa-line-chart"></i> Real-time Sales</h4>
-          </div>
           <div class="panel-body">
-            <div class="col-md-9" id="realtime-chart" style="height: 180px;"></div>
+            <div class="col-md-2">
+              <h4>Recent Activities</h4>
+              <ul class="media-list">
+                <li class="media">
+                  <div class="media-object pull-left">
+                    <i class="fa fa-envelope"></i>
+                  </div>
+                  <div class="media-body">New message from customer<br>
+                    <small class="font-xs"><a href="#">Inbox</a> - 03:56 pm</small>
+                  </div>
+                </li>
+                <li class="media">
+                  <div class="media-object pull-left">
+                    <i class="fa fa-user"></i>
+                  </div>
+                  <div class="media-body">New won opportunity<br>
+                    <small class="font-xs"><a href="#">Sales Manager</a> - 03:53 pm</small>
+                  </div>
+                </li>
+                <li class="media">
+                  <div class="media-object pull-left">
+                    <i class="fa fa-user"></i>
+                  </div>
+                  <div class="media-body">New purchase order<br>
+                    <small class="font-xs"><a href="#">Purchase Manager</a> - 01:12 pm</small>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-7" id="realtime-chart" style="height: 180px;"></div>
             <div class="col-md-3">
               <div class="row">
                 <h5><strong>Last 24 hours</strong></h5>
                 <span class="col-md-6"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
                 <strong class="col-md-6 animated bounceIn">
-                  <span class="text-primary font-300">1,000</span>
-                  <span class="text-danger"> (<i class="fa fa-arrow-down"></i>100)</span>
+                  <label class="label label-primary">1,000</label>
+                  <label class="label label-danger"> (<i class="fa fa-arrow-down"></i>100)</label>
                 </strong>
               </div>
               <div class="row">
                 <span class="col-md-6"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
                 <strong class="col-md-6 animated bounceIn">
-                  <span class="text- text-primary font-300">$15,790.10</span>
-                  <span class="text- text-success"> (<i class="fa fa-arrow-up"></i>702.02)</span>
+                  <label class="label label-primary">$15,790.10</label>
+                  <label class="label label-danger"> (<i class="fa fa-arrow-up"></i>702.02)</label>
                 </strong>
               </div>
               <div class="row">
@@ -34,15 +60,15 @@
                 <h5><strong>Last 30 days</strong></h5>
                 <span class="col-md-6"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
                 <strong class="col-md-6 animated bounceIn">
-                  <span class="text-primary font-300">27,000</span>
-                  <span class="text-danger"> (<i class="fa fa-arrow-down"></i>2,780)</span>
+                  <label class="label label-primary">27,000</label>
+                  <label class="label label-danger"> (<i class="fa fa-arrow-down"></i>2,780)</label>
                 </strong>
               </div>
               <div class="row">
                 <span class="col-md-6"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
                 <strong class="col-md-6 animated bounceIn">
-                  <span class="text-primary font-300">$415,790.10</span>
-                  <span class="text-success"> (<i class="fa fa-arrow-up"></i>80,189.00)</span>
+                  <label class="label label-primary">$415,790.10</label>
+                  <label class="label label-danger"> (<i class="fa fa-arrow-up"></i>80,189.00)</label>
                 </strong>
               </div>
             </div>
@@ -71,24 +97,46 @@
         <div class="panel panel-default dashboard-panel">
           <div class="panel-heading">Stock status</div>
           <div class="panel-body">
+            <label class="label label-danger pull-right">Low Stock</label>
             <a href="#">Product 1</a>
-            <div class="progress animated bounceIn"><div class="progress-bar progress-bar-danger" style="width: 10%" aria-valuenow="10" aria-valuemax="100" aria-valuemin="0">
+            <div class="progress progress-xs animated bounceIn">
+              <div class="progress-bar progress-bar-danger" style="width: 10%" aria-valuenow="10" aria-valuemax="100"
+                   aria-valuemin="0">
 
-            </div></div>
+
+              </div>
+            </div>
             <a href="#">Product 2</a>
-            <div class="progress animated bounceIn"><div class="progress-bar progress-bar-danger" style="width: 20%" aria-valuenow="10" aria-valuemax="100" aria-valuemin="0">
-
-            </div></div>
+            <div class="progress progress-xs animated bounceIn">
+              <div class="progress-bar progress-bar-danger" style="width: 20%" aria-valuenow="10" aria-valuemax="100"
+                   aria-valuemin="0">
+              </div>
+            </div>
+            <label class="label label-warning pull-right">Warning</label>
             <a href="#">Product 3</a>
-            <div class="progress animated bounceIn"><div class="progress-bar progress-bar-warning" style="width: 18%" aria-valuenow="18" aria-valuemax="100" aria-valuemin="0">
-            </div></div>
+            <div class="progress progress-xs animated bounceIn">
+              <div class="progress-bar progress-bar-warning" style="width: 18%" aria-valuenow="18" aria-valuemax="100"
+                   aria-valuemin="0">
+              </div>
+            </div>
             <a href="#">Product 4</a>
-            <div class="progress"><div class="progress-bar progress-bar-info" style="width: 40%" aria-valuenow="40" aria-valuemax="100" aria-valuemin="0">
-            </div></div>
-            <a href="#">Product 5 (with %)</a>
-            <div class="progress"><div class="progress-bar progress-bar-success" style="width: 83%" aria-valuenow="83" aria-valuemax="100" aria-valuemin="0">
-              83%
-            </div></div>
+            <div class="progress progress-xs">
+              <div class="progress-bar progress-bar-info" style="width: 40%" aria-valuenow="40" aria-valuemax="100"
+                   aria-valuemin="0">
+              </div>
+            </div>
+            <a href="#">Product 5</a>
+            <div class="progress progress-xs">
+              <div class="progress-bar progress-bar-success" style="width: 83%" aria-valuenow="83" aria-valuemax="100"
+                   aria-valuemin="0">
+              </div>
+            </div>
+            <a href="#">Product 6</a>
+            <div class="progress progress-xs">
+              <div class="progress-bar progress-bar-success" style="width: 88%" aria-valuenow="88" aria-valuemax="100"
+                   aria-valuemin="0">
+              </div>
+            </div>
             <div>
               <button class="btn btn-default btn-block">More products <i class="fa fa-fw fa-arrow-right"></i></button>
             </div>
@@ -109,9 +157,9 @@
                   <label class="checkbox"><input type="checkbox"><i></i></label>
                 </span>
                 <p class="todo-task-description">
-                <strong class="text-muted">Task #103</strong> - Check products stock status [<a href="#">Details</a>]
-                <span class="text-muted">Task description.</span>
-                <span class="text-muted">Today</span>
+                  <strong class="text-muted">Task #103</strong> - Check products stock status [<a href="#">Details</a>]
+                  <span class="text-muted">Task description.</span>
+                  <span class="text-muted">Today</span>
                 </p>
               </li>
               <!-- end to do item -->
@@ -121,9 +169,9 @@
                   <label class="checkbox"><input type="checkbox"><i></i></label>
                 </span>
                 <p class="todo-task-description">
-                <strong class="text-muted">Task #106</strong> - Write and send new client quotations [<a href="#">Details</a>]
-                <span class="text-muted">Build a new fresh company website.</span>
-                <span class="text-muted">Today</span>
+                  <strong class="text-muted">Task #106</strong> - Write and send new client quotations [<a href="#">Details</a>]
+                  <span class="text-muted">Build a new fresh company website.</span>
+                  <span class="text-muted">Today</span>
                 </p>
               </li>
 
@@ -132,9 +180,9 @@
                   <label class="checkbox"><input type="checkbox"><i></i></label>
                 </span>
                 <p class="todo-task-description">
-                <strong class="text-muted">Task #104</strong> - Build a new company website [<a href="#">Details</a>]
-                <span class="text-muted">Build a new fresh company website.</span>
-                <span class="text-muted">Today</span>
+                  <strong class="text-muted">Task #104</strong> - Build a new company website [<a href="#">Details</a>]
+                  <span class="text-muted">Build a new fresh company website.</span>
+                  <span class="text-muted">Today</span>
                 </p>
               </li>
 
@@ -143,9 +191,10 @@
                   <label class="checkbox"><input type="checkbox"><i></i></label>
                 </span>
                 <p class="todo-task-description">
-                <strong class="text-muted">Task #107</strong> - Check orders report and call clients on phone [<a href="#">Details</a>]
-                <span class="text-muted">Build a new fresh company website.</span>
-                <span class="text-muted">Today</span>
+                  <strong class="text-muted">Task #107</strong> - Check orders report and call clients on phone [<a
+                    href="#">Details</a>]
+                  <span class="text-muted">Build a new fresh company website.</span>
+                  <span class="text-muted">Today</span>
                 </p>
               </li>
             </ul>
@@ -399,7 +448,7 @@
 
     });
 
-  $(function () {
+    $(function () {
       var data2 = [["January", 24], ["February", 12], ["March", 2], ["April", 5], ["May", 18], ["June", 12]];
 
       $.plot("#income-chart", [data2], {
@@ -422,7 +471,7 @@
         }
       });
 
-  });
+    });
 
   </script>
 {% endblock %}
