--- a/katrid/templates/dashboard-2.html
+++ b/katrid/templates/dashboard-2.html
@@ -1,81 +1,50 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="content">
-    <div class="row">
 
-      <!-- dashboard highlight panels -->
-      <div class="dashboard-header col-sm-12">
+    <!-- dashboard highlight panels -->
+    <div class="dashboard-header row">
 
-        <div class="panel-default col-sm-2">
-          <div class="panel-body dashboard-panel">
-            <div id="pie-chart-0" class="pie-chart" data-percent="28" data-size="80" data-pie-size="25">
-              <span class="percent font-lg"></span>
-            </div>
-            <div class="pull-right text-right">
-              <span class="title">Dashboard Panel</span><br>
-              <strong>TEST GAUGE</strong>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel-default col-sm-2">
-          <div class="panel-body dashboard-panel">
-            <i class="pe pe-7s-rocket pe-4x pull-right"></i>
-            <div class="pull-right text-right">
-              <span class="title">Dashboard Panel</span><br>
-              <strong>TEST LAUNCH</strong>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-deep-purple col-sm-2">
-          <div class="panel-body dashboard-panel">
-            <i class="pe pe-7s-rocket pe-4x pull-right"></i>
-            <div class="pull-right text-right">
-              <span class="title">Dashboard Panel</span><br>
-              <strong>TEST LAUNCH</strong>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-green col-sm-2">
-          <div class="panel-body dashboard-panel">
-            <div class="pull-right text-right">
-              <span class="title pull-right">Green Example</span>
-              <h1>$100.00</h1>
-            </div>
-            <i class="pe-7s-cash pe-4x"></i>
-          </div>
-        </div>
-        <div class="bg-light-blue col-sm-2">
-          <div class="panel-body dashboard-panel">
-            <div class="pull-right text-right">
-              <span class="title">Last Sale Value</span><br>
-              <strong>$1,000.00</strong>
-            </div>
-            <i class="pe pe-7s-search pe-4x"></i>
-          </div>
-        </div>
-        <div class="bg-red col-sm-2 animated bounceIn">
-          <div class="panel-body dashboard-panel">
-            <div class="pull-right text-right">
-              <span class="title">Stock Alert</span><br>
-              <strong>Item stock alert!</strong>
-            </div>
-            <i class="pe pe-7s-alarm pe-4x"></i>
+      <div class="panel-default col-lg-2">
+        <div class="panel-body dashboard-panel">
+          <i class="pe pe-7s-rocket pe-4x pull-right"></i>
+          <div class="pull-right text-right">
+            <span class="title">Dashboard Panel</span><br>
+            <strong>TEST LAUNCH</strong>
           </div>
         </div>
       </div>
 
+      <div class="col-lg-offset-8 col-lg-2">
+        <div class="panel panel-default">
+          <div class="panel-heading bg-white text-uppercase">
+            <label class="label label-info pull-right">Status</label>
+            <span>Email Campaigns</span>
+          </div>
+          <div class="panel-body dashboard-panel">
+            <div class="pull-left">
+              <span class="title">Still sending...</span><br>
+            </div>
+            <div id="pie-chart-0" class="pie-chart pull-right" data-percent="28" data-size="60" data-pie-size="25">
+              <span class="percent font-lg"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
       <!-- dashboard widgets -->
       <div class="col-md-2">
         <div class="panel panel-default">
-          <div class="panel-heading">
-            Easy Pie Chart
-          </div>
           <div class="panel-body">
+            <p><i class="fa fa-fw fa-envelope"></i> You have 32 new messages.<a class="btn btn-success btn-block" href="inbox.html" data-toggle="tooltip" data-title="Go to my inbox">Inbox</a></p>
+            <hr>
+            <h3>Recent Activies</h3>
             <p>
-              This is a easy pie chart widget. You can customize your own chart following the easypiechart documentation.
+              This is a easy pie chart widget. You can customize your own chart following the easypiechart
+              documentation.
               <br>
             </p>
             <div id="pie-chart-1" class="pie-chart" data-percent="28" data-size="100" data-pie-size="25">
@@ -85,7 +54,8 @@
               <span class="percent font-lg"></span>
             </div>
             <p>
-              Click here and go to <a href="https://rendro.github.io/easy-pie-chart/" target="_blank">Easy pie chart website.</a>
+              Click here and go to <a href="https://rendro.github.io/easy-pie-chart/" target="_blank">Easy pie chart
+              website.</a>
             </p>
             <hr>
             <p>
@@ -113,7 +83,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <div class="panel panel-default">
           <div class="panel-heading">
             Expenses by month
@@ -123,7 +93,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <div class="panel panel-default">
           <div class="panel-heading">
             Revenue by month
