--- a/katrid/theme/less/forms.less
+++ b/katrid/theme/less/forms.less
@@ -33,7 +33,7 @@ label {
   display: inline-block;
   max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
   margin-bottom: 5px;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 
@@ -127,9 +127,9 @@ select.form-control {
   background-color: @input-bg;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid @input-border;
-  border-radius: 1px; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+  border-radius: 3px; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
   //.box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
-  //.transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
+  .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 
   &:hover {
     border-color: darken(@input-border, 12%);
@@ -345,7 +345,7 @@ input[type="checkbox"] {
 // issue documented in https://github.com/twbs/bootstrap/issues/15074.
 
 .input-sm {
-  .input-size(@input-height-small; @padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; 1px);
+  .input-size(@input-height-small; @padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; 3px);
 }
 .form-group-sm {
   .form-control {
@@ -353,7 +353,7 @@ input[type="checkbox"] {
     padding: @padding-small-vertical @padding-small-horizontal;
     font-size: @font-size-small;
     line-height: @line-height-small;
-    border-radius: 1px;
+    border-radius: 3px;
   }
   select.form-control {
     height: @input-height-small;
@@ -373,7 +373,7 @@ input[type="checkbox"] {
 }
 
 .input-lg {
-  .input-size(@input-height-large; @padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; 1px);
+  .input-size(@input-height-large; @padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; 3px);
 }
 .form-group-lg {
   .form-control {
@@ -381,7 +381,7 @@ input[type="checkbox"] {
     padding: @padding-large-vertical @padding-large-horizontal;
     font-size: @font-size-large;
     line-height: @line-height-large;
-    border-radius: 1px;
+    border-radius: 3px;
   }
   select.form-control {
     height: @input-height-large;
