--- a/katrid/theme/less/skins.less
+++ b/katrid/theme/less/skins.less
@@ -5,17 +5,17 @@ body {
 }
 
 .skin(@bg-color) {
-  #navbar-nav.navbar {
+  #header.navbar {
     border: none;
   }
 
-  #navbar-nav.navbar-skin {
+  #header.navbar-skin {
     background: @bg-color;
     border: none;
     color: #ffffff;
 
     .navbar-search-control {
-      background: rgba(0, 0, 0, .2);
+      background: transparent;
       color: #ffffff;
       border: none;
       border-radius: 4px;
@@ -47,10 +47,10 @@ body {
   }
 
   #left-menu.skin li.menu-item {
-    border-top: 1px solid lighten(@bg-color, 7%);
+    border-top: 1px solid lighten(@bg-color, 4%);
   }
   #left-menu.skin #left-side-menu > li.menu-item:last-child {
-    border-bottom: 1px solid lighten(@bg-color, 7%);
+    border-bottom: 1px solid lighten(@bg-color, 4%);
   }
   #main-content > .footer {
     background: @bg-color;
@@ -71,6 +71,11 @@ body {
   .navbar-skin .navbar-nav > .open > a:focus {
     color: #ffffff;
   }
+
+  .navbar-skin .navbar-search-control:focus {
+    border: transparent;
+    outline: none;
+  }
 }
 
 #left-side-menu > .menu-item > a {
@@ -83,13 +88,8 @@ body {
   }
 }
 
-.navbar-skin .navbar-search-control:focus {
-  border: transparent;
-  outline: none;
-}
-
 .navbar-button > i.fa {
-  background: rgba(0, 0, 0, .2);
+  background: transparent;
   width: auto;
   padding: 10px;
   border-radius: 4px;
@@ -116,7 +116,7 @@ body {
 }
 
 .navy-skin {
-  .skin(#143c58);
+  .skin(#1f3d52);
 }
 
 .deep-purple-skin {
