--- a/katrid/theme/less/style/buttons.less
+++ b/katrid/theme/less/style/buttons.less
@@ -1,3 +1,7 @@
+.btn:focus, .btn:active, .btn:active:focus {
+  outline: none;
+}
+
 // Outline buttons
 // --------------------------------------------------
 
@@ -6,7 +10,8 @@
   border-color: @brand-color;
   color: @brand-color;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: @brand-color;
     border-color: @brand-color;
     color: #ffffff;
@@ -81,4 +86,14 @@
 }
 .btn-blue-gray {
   .button-variant(@btn-primary-color; @brand-blue-gray; @brand-blue-gray);
+}
+
+// Round Button
+.btn-round {
+  border-radius: 20px;
+}
+
+// Circle Button
+.btn-circle {
+  border-radius: 50%;
 }
