--- a/katrid/theme/less/style/utilities.less
+++ b/katrid/theme/less/style/utilities.less
@@ -2,6 +2,10 @@
   font-weight: 300;
 }
 
+.font-600 {
+  font-weight: 600;
+}
+
 .no-margin {
   margin: 0 !important;
 }
@@ -26,6 +30,10 @@
   font-size: x-large;
 }
 
+.font-xs {
+  font-size: x-small;
+}
+
 .font-xxl {
   font-size: xx-large;
 }
@@ -34,9 +42,17 @@
   font-size: 14px;
 }
 
+.font-15px {
+  font-size: 15px;
+}
+
 .child-margin {
 }
 
-.child-margin>.btn {
+.child-margin>.btn, .child-margin>.btn-group {
   margin-bottom: 6px;
+}
+
+.btn .text-danger {
+  color: @brand-danger;
 }
