--- a/katrid/templates/page.html
+++ b/katrid/templates/page.html
@@ -48,7 +48,7 @@
   <!-- end extra head -->
 </head>
 
-<body role="document" class="{% block body_class %}{% endblock %}">
+<body class="{% block body_class %}{% endblock %}">
 {% block page %}{% endblock %}
 
 <!-- Bootstrap core JavaScript
