--- a/katrid/templates/advanced-forms.html
+++ b/katrid/templates/advanced-forms.html
@@ -19,7 +19,7 @@
         </div>
         <p class="help-block">Form help text (leave a useful message here)</p>
       </div>
-      <div>
+      <div class="toolbar">
         <button class="btn btn-primary" type="button">Create New</button>
         <button class="btn btn-default" type="button"><i class="fa fa-fw fa-remove text-danger"></i> Cancel</button>
         <button id="id-btn-delete" class="btn btn-danger-outline" type="button"><i class="fa fa-fw fa-trash-o"></i>
@@ -76,7 +76,7 @@
 
   </div>
 
-  <div class="container">
+  <div class="content container">
     <div class="panel panel-default data-panel">
       <div class="panel-heading">
 
