--- a/katrid/templates/flot.html
+++ b/katrid/templates/flot.html
@@ -48,6 +48,7 @@
 {% endblock %}
 {% block additional_scripts %}
   <script src="plugins/flot/jquery.flot.min.js"></script>
+  <script src="plugins/flot/jquery.flot.resize.min.js"></script>
   <script src="plugins/flot/jquery.flot.pie.min.js"></script>
   <script src="plugins/flot/jquery.flot.categories.min.js"></script>
   <script>
