--- a/katrid/theme/less/style/data.less
+++ b/katrid/theme/less/style/data.less
@@ -14,12 +14,18 @@
 }
 
 .data-heading .help-block {
+  margin-top: 0;
+  margin-bottom: 4px;
   font-weight: 300;
 }
 
 .data-heading .star {
   font-size: large;
   color: silver;
+}
+
+.data-heading .toolbar .btn {
+  margin-top: 8px;
 }
 
 .data-panel fieldset {
