--- a/katrid/theme/less/style.less
+++ b/katrid/theme/less/style.less
@@ -19,6 +19,7 @@
 @import "style/callouts.less";
 @import "style/dialogs.less";
 @import "style/badges.less";
+@import "style/labels.less";
 @import "style/alerts.less";
 @import "style/rating.less";
 @import "style/progress-bars.less";
