--- a/katrid/theme/less/variables.less
+++ b/katrid/theme/less/variables.less
@@ -227,8 +227,8 @@
 @input-border-radius-small:      @border-radius-small;
 
 //** Border color for inputs on focus
-@input-border-focus: @brand-primary;
-//@input-border-focus: #bcbcbc;
+//@input-border-focus: @brand-primary;
+@input-border-focus: #bcbcbc;
 
 //** Placeholder text color
 @input-color-placeholder:        #999;
