--- a/katrid/templates/include/horz-advanced-form.html
+++ b/katrid/templates/include/horz-advanced-form.html
@@ -161,7 +161,7 @@
                 <div>
 
                   <button class="btn btn-info pull-right" type="button">
-                    <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                    <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
                     Send Welcome Email
                   </button>
 
