--- a/katrid/templates/projects.html
+++ b/katrid/templates/projects.html
@@ -21,15 +21,15 @@
   </div>
 
 
-  <div class="content">
+  <div class="content animated">
     <div class="row">
       <div class="col-lg-6">
 
         <!-- project item -->
-        <div class="panel panel-default">
+        <div class="panel panel-default animated fadeIn">
           <div class="panel-body">
             <div class="pull-right">
-              <label class="label label-success">New</label> <label class="label label-warning">Hot</label>
+              <label class="label label-success"><i class="fa fa-fw fa-github"></i> Github</label> <label class="label label-warning">Hot</label>
             </div>
             <div class="row">
               <div class="col-sm-8">
