--- a/katrid/templates/view-email.html
+++ b/katrid/templates/view-email.html
@@ -35,7 +35,7 @@
                 <i class="fa fa-trash"></i>
               </button>
             </div>
-            <h5>John Smith &lt;<a href="#" title="Go to John Smith profile">johnsmith@example.com</a>&gt;
+            <h5 class="font-400">John Smith &lt;<a href="#" title="Go to John Smith profile">johnsmith@example.com</a>&gt;
               <br>
               <small>03:54 PM</small>
             </h5>
