--- a/katrid/templates/advanced-forms.html
+++ b/katrid/templates/advanced-forms.html
@@ -206,7 +206,7 @@
                 <div>
 
                   <button class="btn btn-info pull-right" type="button">
-                    <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                    <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
                     Send Welcome Email
                   </button>
 
@@ -394,7 +394,7 @@
                 <div>
 
                   <button class="btn btn-info pull-right" type="button">
-                    <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                    <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
                     Send Welcome Email
                   </button>
 
