--- a/katrid/templates/dashboard-1.html
+++ b/katrid/templates/dashboard-1.html
@@ -40,36 +40,52 @@
             <div class="col-md-3">
               <div class="row">
                 <h5><strong>Last 24 hours</strong></h5>
-                <span class="col-md-6"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
-                <strong class="col-md-6 animated bounceIn">
-                  <label class="label label-primary">1,000</label>
-                  <label class="label label-danger"> (<i class="fa fa-arrow-down"></i>100)</label>
-                </strong>
+                <span class="col-md-4"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
+                <div class="col-md-8">
+                  <div class="col-sm-6">
+                    <label class="label label-primary">1,000</label>
+                  </div>
+                  <div class="col-sm-6">
+                    <label class="text-danger"> (<i class="fa fa-arrow-down"></i>100)</label>
+                  </div>
+                </div>
               </div>
               <div class="row">
-                <span class="col-md-6"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
-                <strong class="col-md-6 animated bounceIn">
-                  <label class="label label-primary">$15,790.10</label>
-                  <label class="label label-danger"> (<i class="fa fa-arrow-up"></i>702.02)</label>
-                </strong>
+                <span class="col-md-4"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
+                <div class="col-md-8">
+                  <div class="col-sm-6">
+                    <label class="label label-primary">$15,790.10</label>
+                  </div>
+                  <div class="col-sm-6">
+                    <label class="text-danger"> (<i class="fa fa-arrow-up"></i>702.02)</label>
+                  </div>
+                </div>
               </div>
               <div class="row">
                 <hr class="dashboard-hr">
               </div>
               <div class="row">
                 <h5><strong>Last 30 days</strong></h5>
-                <span class="col-md-6"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
-                <strong class="col-md-6 animated bounceIn">
-                  <label class="label label-primary">27,000</label>
-                  <label class="label label-danger"> (<i class="fa fa-arrow-down"></i>2,780)</label>
-                </strong>
+                <span class="col-md-4"><i class="fa fa-fw fa-shopping-cart"></i> Sales:</span>
+                <div class="col-md-8">
+                  <div class="col-sm-6">
+                    <label class="label label-primary">27,000</label>
+                  </div>
+                  <div class="col-sm-6">
+                    <label class="text-danger"> (<i class="fa fa-arrow-down"></i>2,780)</label>
+                  </div>
+                </div>
               </div>
               <div class="row">
-                <span class="col-md-6"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
-                <strong class="col-md-6 animated bounceIn">
-                  <label class="label label-primary">$415,790.10</label>
-                  <label class="label label-danger"> (<i class="fa fa-arrow-up"></i>80,189.00)</label>
-                </strong>
+                <span class="col-md-4"><i class="fa fa-fw fa-dollar"></i> Amount:</span>
+                <div class="col-md-8">
+                  <div class="col-sm-6">
+                    <label class="label label-primary">$415,790.10</label>
+                  </div>
+                  <div class="col-sm-6">
+                    <label class="text-danger"> (<i class="fa fa-arrow-up"></i>80,189.00)</label>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -99,36 +115,42 @@
           <div class="panel-body">
             <label class="label label-danger pull-right">Low Stock</label>
             <a href="#">Product 1</a>
-            <div class="progress progress-xs animated bounceIn">
-              <div class="progress-bar progress-bar-danger" style="width: 10%" aria-valuenow="10" aria-valuemax="100" aria-valuemin="0">
+            <div class="progress progress-xs">
+              <div class="progress-bar progress-bar-danger" style="width: 10%" aria-valuenow="10" aria-valuemax="100"
+                   aria-valuemin="0">
 
 
               </div>
             </div>
             <a href="#">Product 2</a>
-            <div class="progress progress-xs animated bounceIn">
-              <div class="progress-bar progress-bar-danger" style="width: 20%" aria-valuenow="10" aria-valuemax="100" aria-valuemin="0">
+            <div class="progress progress-xs">
+              <div class="progress-bar progress-bar-danger" style="width: 20%" aria-valuenow="10" aria-valuemax="100"
+                   aria-valuemin="0">
               </div>
             </div>
             <label class="label label-warning pull-right">Warning</label>
             <a href="#">Product 3</a>
-            <div class="progress progress-xs animated bounceIn">
-              <div class="progress-bar progress-bar-warning" style="width: 18%" aria-valuenow="18" aria-valuemax="100" aria-valuemin="0">
+            <div class="progress progress-xs">
+              <div class="progress-bar progress-bar-warning" style="width: 18%" aria-valuenow="18" aria-valuemax="100"
+                   aria-valuemin="0">
               </div>
             </div>
             <a href="#">Product 4</a>
             <div class="progress progress-xs">
-              <div class="progress-bar progress-bar-info" style="width: 40%" aria-valuenow="40" aria-valuemax="100" aria-valuemin="0">
+              <div class="progress-bar progress-bar-info" style="width: 40%" aria-valuenow="40" aria-valuemax="100"
+                   aria-valuemin="0">
               </div>
             </div>
             <a href="#">Product 5</a>
             <div class="progress progress-xs">
-              <div class="progress-bar progress-bar-success" style="width: 83%" aria-valuenow="83" aria-valuemax="100" aria-valuemin="0">
+              <div class="progress-bar progress-bar-success" style="width: 83%" aria-valuenow="83" aria-valuemax="100"
+                   aria-valuemin="0">
               </div>
             </div>
             <a href="#">Product 6</a>
             <div class="progress progress-xs">
-              <div class="progress-bar progress-bar-success" style="width: 88%" aria-valuenow="88" aria-valuemax="100" aria-valuemin="0">
+              <div class="progress-bar progress-bar-success" style="width: 88%" aria-valuenow="88" aria-valuemax="100"
+                   aria-valuemin="0">
               </div>
             </div>
             <div>
