--- a/katrid/theme/less/style/common.less
+++ b/katrid/theme/less/style/common.less
@@ -121,3 +121,15 @@ h3, h4, h5, h6 {
   font-weight: 600;
   margin-top: 6px;
 }
+
+@navbar-search-placeholder: #747474;
+
+.navbar-search-control::-webkit-input-placeholder {
+    color: @navbar-search-placeholder;
+}
+.navbar-search-control::-moz-placeholder {
+    color: @navbar-search-placeholder;
+}
+.navbar-search-control:-ms-input-placeholder {
+    color: @navbar-search-placeholder;
+}
