--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -109,12 +109,14 @@
 
 
 #left-side-menu > .menu-item > a {
-  background: linear-gradient(to bottom, #f3f3f3, darken(@body-bg, 3%));
+  background: #f3f3f3;
+  //background: linear-gradient(to bottom, #f3f3f3, darken(@body-bg, 3%));
   font-weight: 600;
 }
 
 .navbar-default {
-  background: linear-gradient(to bottom, #f3f3f3, #dbdbdb);
+  background: #f3f3f3;
+  //background: linear-gradient(to bottom, #f3f3f3, #dbdbdb);
   background-repeat: repeat-x;
   border-bottom: 1px solid #b6b6b6;
 }
