--- a/katrid/theme/less/style/navs.less
+++ b/katrid/theme/less/style/navs.less
@@ -95,6 +95,10 @@
   padding-left: 48px;
 }
 
+#left-menu .menu-item > ul.nav > .menu-item > ul.nav > .menu-item > ul.nav > .menu-item > ul.nav > .menu-item > a {
+  padding-left: 56px;
+}
+
 #left-menu li.menu-item {
   border-top: 1px solid #d4d5d7;
 }
